--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript","next",
-    "next/typescript"]
+  "extends": ["next/core-web-vitals"]
 }
